some changes to prevent 2 NPE on client side fixed error in unused code :D